--- a/TaskMaster.Web/Pages/Index.cshtml
+++ b/TaskMaster.Web/Pages/Index.cshtml
@@ -4,7 +4,24 @@
     ViewData["Title"] = "Home page";
 }
 
+
+
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Task Master</h1>
+    <p class="display-6">Project Tasks and Issues Management</p>
+</div>
+
+<div class="container my-5">
+    <div class="row d-flex">
+        <div class="col-4">
+            <img src="https://bootdey.com/img/Content/bg1.jpg" class="img-responsive rounded-3" width="400" height="500">
+        </div>
+        <div class="col-4">
+            <img src="https://bootdey.com/img/Content/bg1.jpg" alt="" class="img-responsive rounded" width="400" height="500">
+        </div>
+        <div class="col-4">
+            <img src="https://bootdey.com/img/Content/bg1.jpg" alt="" class="img-responsive rounded" width="400" height="500">
+        </div>
+    </div>
 </div>
