--- a/TaskMaster.Web/Pages/Project/GetProjects.cshtml
+++ b/TaskMaster.Web/Pages/Project/GetProjects.cshtml
@@ -46,37 +46,64 @@
                 <button id="createButton" class="btn btn-secondary btn-sm text-end mx-2"><span class="glyphicon glyphicon-filter"></span><i class="fa-solid fa-square-plus"></i></button>
             </div>
         </div>
-        <table class="table">
+        <table class="table table-bordered text-black">
             <thead>
-                <tr class="filters">
+                <tr class="filters bg-secondary">
                     <th><input type="text" class="form-control" placeholder="Name" disabled></th>
                     <th><input type="text" class="form-control" placeholder="Description" disabled></th>
                     <th><input type="text" class="form-control" placeholder="Story" disabled></th>
                     <th><input type="text" class="form-control" placeholder="Starting" disabled></th>
                     <th><input type="text" class="form-control" placeholder="Duration" disabled></th>
                     <th><input type="text" class="form-control" placeholder="Ending" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Finished" disabled></th>
+                    @*<th><input type="text" class="form-control" placeholder="Finished" disabled></th>*@
                     <th><input type="text" class="form-control" placeholder="Status" disabled></th>
-                    <th><input type="text" class="form-control" placeholder="Status Explation" disabled></th>
+                    <th><input type="text" class="form-control" placeholder="Explation" disabled></th>
+                    <th>ACTIONS</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model.Projects)
                 {
-                    <tr>
-                        <td>@item.Name</td>
-                        <td>@item.Description</td>
-                        <td>@item.Story</td>
-                        <td>@item.StartingDate</td>
-                        <td>@item.Duration day</td>
-                        <td>@item.EndingDate</td>
-                        <td>@item.FinishedDate</td>
-                        <td>@item.Status</td>
-                        <td>@item.StatusExplation</td>
-                        <td>
-                            <a href="#" class="btn btn-info">Detail</a>
-                        </td>
-                    </tr>
+                    if (item.IsActive)
+                    {
+                        <tr class="bg-primary">
+                            <td>@item.Name</td>
+                            <td>@item.Description</td>
+                            <td>@item.Story</td>
+                            <td>@item.StartingDate</td>
+                            <td>@item.Duration day</td>
+                            <td>@item.EndingDate</td>
+                            @*<td>@item.FinishedDate</td>*@
+                            <td>@item.Status</td>
+                            <td>@item.StatusExplation</td>
+                            <td>
+                                <a asp-page="/Project/UpdateProject" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
+                                <a asp-page="/Project/DeleteProject" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black"></i></a>
+
+                            </td>
+                        </tr>
+                    }
+                    else
+                    {
+                        <tr class="bg-danger">
+                            <td>@item.Name</td>
+                            <td>@item.Description</td>
+                            <td>@item.Story</td>
+                            <td>@item.StartingDate</td>
+                            <td>@item.Duration day</td>
+                            <td>@item.EndingDate</td>
+                            @*<td>@item.FinishedDate</td>*@
+                            <td>@item.Status</td>
+                            <td>@item.StatusExplation</td>
+                            <td>
+                                <a asp-page="/Project/UpdateProject" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
+                                <a asp-page="/Project/DeleteProject" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black"></i></a>
+
+
+                            </td>
+                        </tr>
+                    }
+
 
                 }
 
@@ -142,57 +169,7 @@
 </div>
 
 
-<!--
 
-<div class="row my-xl-5" @*style="display:none"*@ id="createRow">
-    <div class="display-6 text-center">Creating project</div>
-    <form method="post">
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="inputEmail4">Name</label>
-                <input asp-for="CreateProject.Name" type="text" class="form-control">
-            </div>
-            <div class="form-group col-md-6 mt-1">
-                <label class="form-label">Description</label>
-                <input type="text" asp-for="CreateProject.Description" class="form-control">
-            </div>
-        </div>
-        <div class="form-group mt-1">
-            <label class="form-label">Story</label>
-            <input type="text" asp-for="CreateProject.Story" class="form-control">
-        </div>
-        <div class="form-group mt-1 col-md-3">
-            <label class="form-label">Duration</label>
-            <input type="text" asp-for="CreateProject.Duration" class="form-control">
-        </div>
-        <div class="form-row">
-            <div class="form-group mt-1 col-md-6">
-                <label class="form-label">Starting</label>
-                <input type="date" asp-for="CreateProject.StartingDate" class="form-control">
-            </div>
-            <div class="form-group mt-1 col-md-6">
-                <label for="inputCity">Finished</label>
-                <input type="date" asp-for="CreateProject.FinishedDate" class="form-control">
-            </div>
-            <div class="form-group mt-1 col-md-2">
-                <label class="form-label">Status</label>
-                <select asp-for="CreateProject.ProjectStatus" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.ProjectDtos.StatusDto>()" class="form-control form-select">
-                    <option value="">Choose...</option>
-                </select>
-            </div>
-            <div class="form-group mt-1 col-md-6">
-                <label class="form-label">Explation</label>
-                <input type="text" asp-for="CreateProject.StatusExplation" class="form-control">
-            </div>
-
-            <div class="form-group my-3">
-                <button type="submit" class="btn btn-primary">Save</button>
-            </div>
-        </div>
-    </form>
-</div>
-
--->
 
 @section Scripts{
 
