--- a/TaskMaster.Web/Pages/Project/GetProjects.cshtml
+++ b/TaskMaster.Web/Pages/Project/GetProjects.cshtml
@@ -78,7 +78,7 @@
                             <td>@item.StatusExplation</td>
                             <td>
                                 <a asp-page="/Project/UpdateProject" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                                <a asp-page="/Project/DeleteProject" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black"></i></a>
+                                <a asp-page="/Project/DeleteProject" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black my-1"></i></a>
 
                             </td>
                         </tr>
@@ -97,7 +97,7 @@
                             <td>@item.StatusExplation</td>
                             <td>
                                 <a asp-page="/Project/UpdateProject" asp-route-id="@item.Id"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                                <a asp-page="/Project/DeleteProject" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black"></i></a>
+                                <a asp-page="/Project/DeleteProject" asp-route-id="@item.Id"><i class="fa-solid fa-trash text-black my-1"></i></a>
 
 
                             </td>
