--- a/TaskMaster.Web/Pages/Project/UpdateProject.cshtml
+++ b/TaskMaster.Web/Pages/Project/UpdateProject.cshtml
@@ -3,7 +3,7 @@
 
 
 <div class="row justify-content-center">
-    <div class="display-6 text-center">Updating Project</div>
+    <div class="display-6 text-center">Update</div>
 </div>
 <div class="row justify-content-center">
     <div class="col-12">
@@ -70,7 +70,7 @@
             <div class="col-8 offset-2 mt-2">
                 <div class="col-8 form-group">
                     <button type="submit" class="btn btn-primary text-black"><i class="fa-solid fa-floppy-disk text-black"></i> Save</button>
-                    <a asp-page="/Project/GetProjects" class="btn btn-warning"><i class="fa-solid fa-backward"></i> Cancel</a>
+                    <a asp-page="/Project/GetProjects" class="btn btn-warning"><i class="fa-solid fa-rectangle-xmark text-black"></i> Cancel</a>
                 </div>
             </div>
         </form>
