--- a/TaskMaster.Web/Pages/Project/UpdateProject.cshtml
+++ b/TaskMaster.Web/Pages/Project/UpdateProject.cshtml
@@ -29,6 +29,12 @@
                     <input asp-for="UpdateProject.Name" type="text" class="form-control">
                 </div>
             </div>
+            <div class="col-8 offset-2 d-inline-flex">
+                <div class="col-8 form-group">
+                    <span> Repo</span>
+                    <input asp-for="UpdateProject.Repo" type="text" class="form-control">
+                </div>
+            </div>
             <div class="col-8 offset-2 d-inline-flex mt-1">
                 <div class="col-4 form-group">
                     <span> Description</span>
